fixing scrollbar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -506,7 +506,7 @@ ul {
   position: fixed;
   z-index: 99;
   width: 100%;
-  max-width: 99%;
+  max-width: 100%;
   top: 0;
   left: 0;
   background: rgba(255, 255, 255, 0.9);
